BAU: print out detected changed files in secure-post-merge GHA
Despite functional code being updated, the deploy job is being skipped so the code isn't deployed. This will help debug the issue in post-merge

--- a/.github/workflows/secure-post-merge.yml
+++ b/.github/workflows/secure-post-merge.yml
@@ -81,6 +81,14 @@ jobs:
             journey-map/**
             local-running/**
 
+      - name: List changed files
+        env:
+          CHANGED_FILES: ${{ steps.check-if-should-deploy.outputs.all_changed_files }}
+        run: |
+          for file in $CHANGED_FILES; do
+            echo "$file was changed"
+          done
+
   deploy:
     needs:
       - build-test-images-if-needed
