--- a/.github/workflows/secure-post-merge.yml
+++ b/.github/workflows/secure-post-merge.yml
@@ -48,9 +48,13 @@ jobs:
             echo "$file was changed"
           done
 
-#  build-test-images-if-needed:
-#    needs: check-if-api-tests-changed
-#    if: ${{ needs.check-if-api-tests-changed.outputs.api-tests-changed == 'true' }}
+  build-test-images-if-needed:
+    needs: check-if-api-tests-changed
+    if: ${{ needs.check-if-api-tests-changed.outputs.api-tests-changed == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: run echo
+        run: echo "Triggered build test images"
 #    uses: govuk-one-login/ipv-core-back/.github/workflows/secure-pipeline-api-tests-image.yml@main
 #    with:
 #      environment: ${{ github.event_name == 'workflow_dispatch' && 'dev01' || 'build' }}
@@ -98,10 +102,11 @@ jobs:
   check-output-value:
     runs-on: ubuntu-latest
     needs:
+      - build-test-images-if-needed
       - check-if-deploy-needed
     if: ${{ needs.check-if-deploy-needed.outputs.deploy-needed == 'true' || github.event_name == 'workflow_dispatch' }}
     steps:
-      - name: get output for cehck-if-deploy-needed
+      - name: get output for check-if-deploy-needed
         run: |
           echo "checkIfDeployNeededOutput is: ${{ needs.check-if-deploy-needed.outputs.deploy-needed == 'true' || github.event_name == 'workflow_dispatch'}}"
 
