--- a/.github/workflows/secure-post-merge.yml
+++ b/.github/workflows/secure-post-merge.yml
@@ -102,8 +102,7 @@ jobs:
       - check-if-deploy-needed
     if: |
       !failure() &&
-      (needs.check-if-deploy-needed.outputs.deploy-needed == 'true' || github.event_name == 'workflow_dispatch') &&
-      (needs.build-test-images-if-needed.result == 'success' || needs.build-test-images-if-needed.result == 'skipped')
+      (needs.check-if-deploy-needed.outputs.deploy-needed == 'true' || github.event_name == 'workflow_dispatch')
     steps:
       - name: get output for check-if-deploy-needed
         run: |
