BAU: add !failure() check
The deploy job wasn't being triggered because it requires "build-test-images-if-needed" to be in a success state. By adding !failure(), we allow it to also be triggered when it's been skipped

--- a/.github/workflows/secure-post-merge.yml
+++ b/.github/workflows/secure-post-merge.yml
@@ -93,7 +93,9 @@ jobs:
     needs:
       - build-test-images-if-needed
       - check-if-deploy-needed
-    if: ${{ needs.check-if-deploy-needed.outputs.deploy-needed == 'true' || github.event_name == 'workflow_dispatch' }}
+    if: |
+      !failure() &&
+      (needs.check-if-deploy-needed.outputs.deploy-needed == 'true' || github.event_name == 'workflow_dispatch')
     runs-on: ubuntu-latest
     timeout-minutes: 15
     env:
