PYIC-8843: Exclude just the netty libs causing alerts
It seems like other bits of Netty are used elsewhere in core-back

--- a/build.gradle
+++ b/build.gradle
@@ -50,9 +50,9 @@ subprojects {
 allprojects {
 	configurations.configureEach {
 		exclude group: 'org.apache.tika', module: 'tika-parser-pdf-module'
-		// Exclude netty in general
-		exclude group: "io.netty", module: "*"
-		exclude group: "io.grpc", module: "grpc-netty"
+		// Exclude netty libs with vulnerabilities
+		exclude group: "io.netty", module: "netty-codec-http"
+		exclude group: "io.netty", module: "netty-codec-http2"
 	}
 
 	plugins.withType(JavaPlugin).whenPluginAdded {
