--- a/libs/test-data/src/main/resources/test-parameters.yaml
+++ b/libs/test-data/src/main/resources/test-parameters.yaml
@@ -10,6 +10,7 @@ core:
     maxAllowedAuthClientTtl: 3600
     fraudCheckExpiryPeriodHours: 720
     dcmawAsyncVcPendingReturnTtl: 1800
+    dcmawExpiredDlValidityPeriodDays: 180
     clientJarKmsEncryptionKeyAliasPrimary: "CoreEncryptionKey1"
     clientJarKmsEncryptionKeyAliasSecondary: "CoreEncryptionKey2"
     coreVtmClaim: "https://oidc.local.account.gov.uk/trustmark"
