PYIC-8880: Add feature flag
Also add features to enable and disable it

--- a/libs/test-data/src/main/resources/test-parameters.yaml
+++ b/libs/test-data/src/main/resources/test-parameters.yaml
@@ -359,6 +359,7 @@ core:
     sorryTechnicalErrorEnabled: false
     storedIdentityServiceEnabled: true
     sisVerificationEnabled: true
+    aisStateCheckEnabled: false
     testFeatureFlag: false
   features:
     testFeature:
@@ -391,6 +392,12 @@ core:
     zeroHourFraudVcExpiry:
       self:
         fraudCheckExpiryPeriodDays: 0
+    aisStateCheck:
+      featureFlags:
+        aisStateCheckEnabled: true
+    disableAisStateCheck:
+      featureFlags:
+        aisStateCheckEnabled: false
     # Disabling CRIs
     f2fDisabled:
       credentialIssuers:
