--- a/local-running/core.local.params.yaml
+++ b/local-running/core.local.params.yaml
@@ -362,8 +362,15 @@ core:
     sorryTechnicalErrorEnabled: false
     storedIdentityServiceEnabled: true
     sisVerificationEnabled: true
+    aisStateCheckEnabled: false
 
   features:
+    aisStateCheck:
+      featureFlags:
+        aisStateCheckEnabled: true
+    disableAisStateCheck:
+      featureFlags:
+        aisStateCheckEnabled: false
     storedIdentityService:
       featureFlags:
         storedIdentityServiceEnabled: true
