PYIC-8880: Allow mid journey intervention and ticf interventions checks to use AIS state instead of description
If AIS_STATE_CHECK is enabled then test for mid journey interventions and TICF interventions by looking at the AIS state rather than the description

--- a/libs/ais-service/build.gradle
+++ b/libs/ais-service/build.gradle
@@ -68,3 +68,15 @@ jacocoTestReport {
 		xml.required.set(true)
 	}
 }
+
+configurations {
+	tests.extendsFrom(testImplementation)
+}
+
+tasks.register('jarTest', Jar) {
+	from sourceSets.test.output
+	archiveClassifier.set('tests')
+}
+artifacts {
+	tests jarTest
+}
