PYIC-8899: update check-if-api-tests-changed job to always compare against last remote commit including when doing a workflow dispatch
When triggered by workflow_dispatch, tj-actions/changed-files compares the preceding commit to the current commit on the current branch. But, we want it to compare the current commit on the current branch to the current commit on main

--- a/.github/workflows/secure-post-merge.yml
+++ b/.github/workflows/secure-post-merge.yml
@@ -26,6 +26,15 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Get branch name
+        id: branch-name
+        uses: tj-actions/branch-names@5250492686b253f06fa55861556d1027b067aeb5 # v9.0.2
+
+      - uses: nrwl/nx-set-shas@3e9ad7370203c1e93d109be57f3b72eb0eb511b1 # v4.4.0
+        id: last_successful_commit_push_on_main
+        with:
+          main-branch-name: ${{ steps.branch-name.outputs.default_branch }}
+
       - name: Get changed api-tests files
         id: get-changed-files
         uses: tj-actions/changed-files@e0021407031f5be11a464abee9a0776171c79891 # v47.0.1
@@ -33,6 +42,7 @@ jobs:
           files: |
             api-tests/**
             .github/workflows/secure-pipeline-api-tests-image.yml
+          base_sha: ${{ steps.last_successful_commit_push_on_main.outputs.base }}
 
       - name: List changed files
         env:
@@ -45,7 +55,7 @@ jobs:
   build-test-images-if-needed-build:
     needs: check-if-api-tests-changed
     if: ${{ needs.check-if-api-tests-changed.outputs.api-tests-changed == 'true' && github.event_name == 'push' }}
-    uses: govuk-one-login/ipv-core-back/.github/workflows/secure-pipeline-api-tests-image.yml@dee13b402a32bb7ba9e4d3610288cc11f9658389
+    uses: govuk-one-login/ipv-core-back/.github/workflows/secure-pipeline-api-tests-image.yml@main
     with:
       environment: 'build'
     secrets:
@@ -60,7 +70,7 @@ jobs:
   build-test-images-if-needed-shared-dev:
     needs: check-if-api-tests-changed
     if: ${{ needs.check-if-api-tests-changed.outputs.api-tests-changed == 'true' }}
-    uses: govuk-one-login/ipv-core-back/.github/workflows/secure-pipeline-api-tests-image.yml@dee13b402a32bb7ba9e4d3610288cc11f9658389
+    uses: govuk-one-login/ipv-core-back/.github/workflows/secure-pipeline-api-tests-image.yml@main
     with:
       environment: 'dev01'
     secrets:
