PYIC-8880: Allow start of journey intervention checks to use AIS state instead of description
If AIS_STATE_CHECK is enabled then test for a start of journey interventions by looking at the AIS state rather than the description

--- a/lambdas/check-existing-identity/build.gradle
+++ b/lambdas/check-existing-identity/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 			libs.junitJupiter,
 			libs.mockitoJunit,
 			project(path: ':libs:common-services', configuration: 'tests'),
+			project(path: ':libs:ais-service', configuration: 'tests'),
 			project(path: ':libs:test-helpers')
 
 	mockitoAgent(libs.mockitoCore) {
