PYIC-8792: Release 'Sorry Technical Error' page to users
Feature flag sorryTechnicalErrorEnabled and feature set sorryTechnicalError are set to true
Quality gate tag for these tests has been updated to @QualityGateRegressionTest

--- a/libs/test-data/src/main/resources/test-parameters.yaml
+++ b/libs/test-data/src/main/resources/test-parameters.yaml
@@ -356,7 +356,7 @@ core:
     sqsAsync: true
     kidJarHeaderEnabled: true
     drivingLicenceAuthCheck: true
-    sorryTechnicalErrorEnabled: false
+    sorryTechnicalErrorEnabled: true
     storedIdentityServiceEnabled: true
     sisVerificationEnabled: true
     aisStateCheckEnabled: false
