--- a/journey-map/deploy/template.yaml
+++ b/journey-map/deploy/template.yaml
@@ -28,6 +28,17 @@ Conditions:
   UsePermissionsBoundary: !Not
     - !Equals [!Ref PermissionsBoundary, "none"]
 
+Mappings:
+  EnvironmentConfiguration:
+    "130355686670":
+      albAccessLogBucket: "ipv-core-dev01-access-logs"
+    "175872367215":
+      albAccessLogBucket: "ipv-core-dev02-access-logs"
+    "616199614141":
+      albAccessLogBucket: "ipv-stubs-build-access-logs"
+    "388905755587":
+      albAccessLogBucket: "ipv-stubs-production-access-logs"
+
 Resources:
   # ssl cert
   JourneyMapSSLCert:
@@ -190,7 +201,7 @@ Resources:
         - Key: "access_logs.s3.enabled"
           Value: "true"
         - Key: "access_logs.s3.bucket"
-          Value: "ipv-core-dev02-access-logs"
+          Value: !FindInMap [ EnvironmentConfiguration, !Ref AWS::AccountId, albAccessLogBucket ]
 
   LoadBalancerListenerTargetGroupECS:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
